apps/podinfo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: podinfo
spec:
  to:
    kind: Service
    name: podinfo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
